simutrace/include/SimuTrace.h

    
    SIMUTRACE_API
    uint32_t StGetClientVersion(void);
    SIMUTRACE_API
    int StGetLastError(ExceptionInformation* informationOut);
    SIMUTRACE_API
    SessionId StSessionCreate(const char* server);
    SIMUTRACE_API
    _bool StSessionOpen(SessionId session);
    SIMUTRACE_API
    _bool StSessionClose(SessionId session);
    SIMUTRACE_API
    _bool StSessionCreateStore(SessionId session, const char* specifier,
                               _bool alwaysCreate);
    SIMUTRACE_API
    _bool StSessionOpenStore(SessionId session, const char* specifier);
    SIMUTRACE_API
    _bool StSessionCloseStore(SessionId session);
    SIMUTRACE_API
    _bool StSessionSetConfiguration(SessionId session, const char* configuration);
    SIMUTRACE_API
    _bool StMakeStreamDescriptor(const char* name, uint32_t entrySize,
                                 _bool temporalOrder, StreamDescriptor* descOut);
    SIMUTRACE_API
    _bool StMakeStreamDescriptorFromType(const char* name,
                                         const StreamTypeDescriptor* type,
                                         StreamDescriptor* descOut);
    SIMUTRACE_API
    const StreamTypeDescriptor* StStreamFindMemoryType(ArchitectureSize size,
        MemoryAccessType accessType, MemoryAddressType addressType,
        _bool hasData);
    SIMUTRACE_API
    StreamId StStreamRegister(SessionId session, StreamDescriptor* desc);
    SIMUTRACE_API
    int StStreamEnumerate(SessionId session, size_t bufferSize,
                          StreamId* streamIdsOut);
    SIMUTRACE_API
    _bool StStreamQuery(SessionId session, StreamId stream,
                        StreamQueryInformation* informationOut);
    SIMUTRACE_API
    StreamHandle StStreamAppend(SessionId session, StreamId stream,
                                StreamHandle handle);
    SIMUTRACE_API
    StreamHandle StStreamOpen(SessionId session, StreamId stream,
                              QueryIndexType type, uint64_t value,
                              StreamAccessFlags flags, StreamHandle handle);
    SIMUTRACE_API
    _bool StStreamClose(StreamHandle handle);
    SIMUTRACE_API
    void* StGetNextEntry(StreamHandle* handlePtr);
    SIMUTRACE_API
    void* StGetPreviousEntry(StreamHandle* handlePtr);
    SIMUTRACE_API
    void StSubmitEntry(StreamHandle handle);
    SIMUTRACE_API
    size_t StWriteVariableData(StreamHandle* handlePtr, byte* sourceBuffer,
                               size_t sourceLength, uint64_t* referenceOut);
    SIMUTRACE_API
    size_t StReadVariableData(StreamHandle* handlePtr, uint64_t reference,
                              byte* destinationBuffer);